// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Email template snapshots Should return the expeted email for BCEID_PROD_APPROVED 1`] = `"[DEV] BCeID Request ID 1 approved and being processed"`;

exports[`Email template snapshots Should return the expeted email for BCEID_PROD_APPROVED 2`] = `
"<h1>Hello Pathfinder Friend,</h1>
<p>
  Your Pathfinder SSO production environment for BCeID <strong>integration request ID 1</strong> has
  been approved.
</p>
<p>
  Your resources will be available in the next 20 minutes or so, please log in to your dashboard to see the progress.
</p>
<p><strong>Project Name: </strong>test</p>
<p><strong>Submitted By: </strong>SSO Admin</p>
<p>If you are not the requester, this email serves only to notify you of the request status.</p>
<p>
  If you have any questions, please contact us by
  <a href=\\"https://chat.developer.gov.bc.ca/channel/sso\\" target=\\"_blank\\" title=\\"Rocket Chat\\" rel=\\"noreferrer\\">
    Rocket.Chat
  </a>
  or email at:
  <a href=\\"mailto:bcgov.sso@gov.bc.ca\\" title=\\"Pathfinder SSO\\" target=\\"_blank\\" rel=\\"noreferrer\\"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>
"
`;

exports[`Email template snapshots Should return the expeted email for CREATE_INTEGRATION_APPROVED 1`] = `"[DEV] Pathfinder SSO request approved"`;

exports[`Email template snapshots Should return the expeted email for CREATE_INTEGRATION_APPROVED 2`] = `
"<h1>Your Pathfinder SSO request ID 1 is approved.</h1>
<p>
  <strong>Project name: </strong>test<br />
  <strong>Submitted by: </strong>SSO Admin
</p>
<p>
  Please <a href=\\"http://localhost:3000/my-dashboard/integrations\\" title=\\"Log in\\" target=\\"_blank\\" rel=\\"noreferrer\\">Log in</a>
  to your dashboard to access JSON Client Installation File. If you are not the requester, this email serves only to
  notify you of the request status.
</p>
<p>
  If you have any questions, please contact us by
  <a href=\\"https://chat.developer.gov.bc.ca/channel/sso\\" target=\\"_blank\\" title=\\"Rocket Chat\\" rel=\\"noreferrer\\">
    Rocket.Chat
  </a>
  or email at:
  <a href=\\"mailto:bcgov.sso@gov.bc.ca\\" title=\\"Pathfinder SSO\\" target=\\"_blank\\" rel=\\"noreferrer\\"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>
"
`;

exports[`Email template snapshots Should return the expeted email for CREATE_INTEGRATION_SUBMITTED 1`] = `"[DEV] Pathfinder SSO request submitted"`;

exports[`Email template snapshots Should return the expeted email for CREATE_INTEGRATION_SUBMITTED 2`] = `
"<h1>Your Pathfinder SSO request ID 1 is successfully submitted.</h1>
<p>
  <strong>Project name: </strong>test<br />
  <strong>Submitted by: </strong>SSO Admin
</p>
<p>
  <strong>The expected processing time is 20 minutes</strong><br />
  Once the request is approved, you will receive another email that your JSON Client Installation is ready. If you are
  not the requester, this email serves only to notify you of the request status.
</p>
<p>
  If you have any questions, please contact us by
  <a href=\\"https://chat.developer.gov.bc.ca/channel/sso\\" target=\\"_blank\\" title=\\"Rocket Chat\\" rel=\\"noreferrer\\">
    Rocket.Chat
  </a>
  or email at:
  <a href=\\"mailto:bcgov.sso@gov.bc.ca\\" title=\\"Pathfinder SSO\\" target=\\"_blank\\" rel=\\"noreferrer\\"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>
"
`;

exports[`Email template snapshots Should return the expeted email for CREATE_INTEGRATION_SUBMITTED_BCEID_NONPROD_IDIM 1`] = `"[DEV] New BCeID Request ID 1"`;

exports[`Email template snapshots Should return the expeted email for CREATE_INTEGRATION_SUBMITTED_BCEID_NONPROD_IDIM 2`] = `
"<h1>Hello IDIM Team,</h1>
<p>
  We are notifying you that a new dev and/or test integration request has been submitted. The request details are below:
</p>
<ul>
  <li><strong>Project name: </strong>test</li>
  <li><strong>Accountable person: </strong>Test User</li>
  <li>
    <strong>URIs:</strong>
    <ul>
      <li> Development: https://b </li> 
    </ul>
  </li>
  <li><strong>Identity Providers Required:</strong>idir</li>
</ul>
<p>
  If you have any questions, please contact us by
  <a href=\\"https://chat.developer.gov.bc.ca/channel/sso\\" target=\\"_blank\\" title=\\"Rocket Chat\\" rel=\\"noreferrer\\">
    Rocket.Chat
  </a>
  or email at:
  <a href=\\"mailto:bcgov.sso@gov.bc.ca\\" title=\\"Pathfinder SSO\\" target=\\"_blank\\" rel=\\"noreferrer\\"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>
"
`;

exports[`Email template snapshots Should return the expeted email for CREATE_INTEGRATION_SUBMITTED_BCEID_PROD 1`] = `"[DEV] New BCeID Request ID 1"`;

exports[`Email template snapshots Should return the expeted email for CREATE_INTEGRATION_SUBMITTED_BCEID_PROD 2`] = `
"<h1>Hello Pathfinder SSO friend,</h1>
<p>Thank you for your integration request. Below is a summary of your integration request details.</p>
<ul>
  <li><strong>Project name: </strong>test</li>
  <li><strong>Accountable person: </strong>Test User</li>
  <li>
    <strong>URIs:</strong>
    <ul>
      <li> Development: https://b </li> <li> Test: https://a </li>
    </ul>
  </li>
  <li><strong>Identity Providers Required: </strong>idir</li>
</ul>
<p><strong>Submitted by: </strong>SSO Admin</p>
<p>
  As you've requested an integration with BCeID, any production integration request requires you to work with the
  Identity and Information Management (IDIM) team.
</p>
<ul>
  <li>
    <strong>URIs:</strong>
    <ul>
      <li> Production: https://a </li>
    </ul>
  </li>
</ul>
<h1>Next Steps</h1>
<ol>
  <li>
    <strong>
      On a best effort basis, the BCeID team will endeavour to reach out to you within 2-3 business days to schedule an
      on-boarding meeting.
    </strong>
  </li>
  <li><strong>Please have answers to the questions below, before your meeting with the IDIM team.</strong></li>
</ol>
<ul>
  <li>What is your estimated volume of initial users?</li>
  <li>Do you anticipate your volume of users will grow over the next three years?</li>
  <li>When do you need access to the production environment by?</li>
  <li>When will your end users need access to the production environment?</li>
</ul>
<p>
  If you have any questions, please contact us by
  <a href=\\"https://chat.developer.gov.bc.ca/channel/sso\\" target=\\"_blank\\" title=\\"Rocket Chat\\" rel=\\"noreferrer\\">
    Rocket.Chat
  </a>
  or email at:
  <a href=\\"mailto:bcgov.sso@gov.bc.ca\\" title=\\"Pathfinder SSO\\" target=\\"_blank\\" rel=\\"noreferrer\\"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>
"
`;

exports[`Email template snapshots Should return the expeted email for DELETE_INTEGRATION_SUBMITTED 1`] = `"[DEV] Pathfinder SSO integration ID 1 deleted"`;

exports[`Email template snapshots Should return the expeted email for DELETE_INTEGRATION_SUBMITTED 2`] = `
"<h1>Your Pathfinder SSO request ID 1 is deleted.</h1>
<p>
  <strong>Project name: </strong>test<br />
  <strong>Deleted by: </strong>SSO Admin
</p>
<p>This email serves only to notify you of the request status.</p>
<p>
  To view your integrations please
  <a href=\\"http://localhost:3000/my-dashboard/integrations\\" title=\\"Log in\\" target=\\"_blank\\" rel=\\"noreferrer\\">Log in</a>.
</p>
<p>
  If you have any questions, please contact us by
  <a href=\\"https://chat.developer.gov.bc.ca/channel/sso\\" target=\\"_blank\\" title=\\"Rocket Chat\\" rel=\\"noreferrer\\">
    Rocket.Chat
  </a>
  or email at:
  <a href=\\"mailto:bcgov.sso@gov.bc.ca\\" title=\\"Pathfinder SSO\\" target=\\"_blank\\" rel=\\"noreferrer\\"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>
"
`;

exports[`Email template snapshots Should return the expeted email for DELETE_INTEGRATION_SUBMITTED_BCEID 1`] = `"[DEV] BCeID Integration ID 1 deleted"`;

exports[`Email template snapshots Should return the expeted email for DELETE_INTEGRATION_SUBMITTED_BCEID 2`] = `
"<h1>Hello IDIM Team,</h1>
<p>We are notifying you that we have received a request to delete an integration. The request details are below:</p>
<ul>
  <li><strong>Requester: </strong>SSO Admin</li>
  <li><strong>Project name: </strong>test #(1)</li>
  <li><strong>Accountable person: </strong>Test User</li>
  <li>
    <strong>URIs:</strong>
    <ul>
      <li> Development: https://b </li>  
    </ul>
  </li>
  <li><strong>Identity Providers Required: </strong>idir</li>
</ul>
<p>
  To view your integrations please
  <a href=\\"http://localhost:3000/my-dashboard/integrations\\" title=\\"Log in\\" target=\\"_blank\\" rel=\\"noreferrer\\">Log in</a>.
</p>
<p>
  If you have any questions, please contact us by
  <a href=\\"https://chat.developer.gov.bc.ca/channel/sso\\" target=\\"_blank\\" title=\\"Rocket Chat\\" rel=\\"noreferrer\\">
    Rocket.Chat
  </a>
  or email at:
  <a href=\\"mailto:bcgov.sso@gov.bc.ca\\" title=\\"Pathfinder SSO\\" target=\\"_blank\\" rel=\\"noreferrer\\"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>
"
`;

exports[`Email template snapshots Should return the expeted email for REQUEST_LIMIT_EXCEEDED 1`] = `"[DEV] Pathfinder SSO request limit reached"`;

exports[`Email template snapshots Should return the expeted email for REQUEST_LIMIT_EXCEEDED 2`] = `
"<h1>Request Limit Exceeded</h1>
<p>Pathfinder SSO user <strong>test user (#1)</strong> has exceeded their daily limit</p>
"
`;

exports[`Email template snapshots Should return the expeted email for TEAM_DELETED 1`] = `"[DEV] Team testteam has been removed by a team admin"`;

exports[`Email template snapshots Should return the expeted email for TEAM_DELETED 2`] = `
"<p>testteam has been removed as well as your membership from the team.</p>
<p>
  To view your integrations please
  <a href=\\"http://localhost:3000/my-dashboard/integrations\\" title=\\"Log in\\" target=\\"_blank\\" rel=\\"noreferrer\\">Log in</a>.
</p>
<p>
  If you have any questions, please contact us by
  <a href=\\"https://chat.developer.gov.bc.ca/channel/sso\\" target=\\"_blank\\" title=\\"Rocket Chat\\" rel=\\"noreferrer\\">
    Rocket.Chat
  </a>
  or email at:
  <a href=\\"mailto:bcgov.sso@gov.bc.ca\\" title=\\"Pathfinder SSO\\" target=\\"_blank\\" rel=\\"noreferrer\\"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>
"
`;

exports[`Email template snapshots Should return the expeted email for TEAM_INVITATION 1`] = `"[DEV] Invitation to join testteam"`;

exports[`Email template snapshots Should return the expeted email for TEAM_INVITATION 2`] = `
"<h1>Hello Pathfinder SSO friend,</h1>
<p>You are invited to join <strong>testteam (#1)</strong></p>
<p>
  Please follow this <a href=\\"http://localhost:8080/app/teams/verify?token=https://mysite.com/invitation-link\\">link</a> to view your invitation in the
  dashboard. This link will expire in <strong>2 business days.</strong>
</p>
<p>
  If you think you're receiving this invitation by accident, or have any questions, please contact the SSO Pathfinder
  team by
  <a href=\\"https://chat.developer.gov.bc.ca/channel/sso\\" target=\\"_blank\\" title=\\"Rocket Chat\\" rel=\\"noreferrer\\">
    Rocket.Chat
  </a>
  or reply to this email
</p>
<p>
  If you have any questions, please contact us by
  <a href=\\"https://chat.developer.gov.bc.ca/channel/sso\\" target=\\"_blank\\" title=\\"Rocket Chat\\" rel=\\"noreferrer\\">
    Rocket.Chat
  </a>
  or email at:
  <a href=\\"mailto:bcgov.sso@gov.bc.ca\\" title=\\"Pathfinder SSO\\" target=\\"_blank\\" rel=\\"noreferrer\\"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>
"
`;

exports[`Email template snapshots Should return the expeted email for TEAM_MEMBER_DELETED_ADMINS 1`] = `"[DEV] Team Admin has modified testteam"`;

exports[`Email template snapshots Should return the expeted email for TEAM_MEMBER_DELETED_ADMINS 2`] = `
"<p>A team member <strong>()</strong> has been removed from <strong>testteam</strong>.</p>
<p>
  To view your integrations please
  <a href=\\"http://localhost:3000/my-dashboard/integrations\\" title=\\"Log in\\" target=\\"_blank\\" rel=\\"noreferrer\\">Log in</a>.
</p>
<p>
  If you have any questions, please contact us by
  <a href=\\"https://chat.developer.gov.bc.ca/channel/sso\\" target=\\"_blank\\" title=\\"Rocket Chat\\" rel=\\"noreferrer\\">
    Rocket.Chat
  </a>
  or email at:
  <a href=\\"mailto:bcgov.sso@gov.bc.ca\\" title=\\"Pathfinder SSO\\" target=\\"_blank\\" rel=\\"noreferrer\\"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>
"
`;

exports[`Email template snapshots Should return the expeted email for TEAM_MEMBER_DELETED_USER_REMOVED 1`] = `"[DEV] Team Admin has modified testteam"`;

exports[`Email template snapshots Should return the expeted email for TEAM_MEMBER_DELETED_USER_REMOVED 2`] = `
"<p>A team admin from <strong>testteam</strong> has removed your membership.</p>
<p>
  To view your integrations please
  <a href=\\"http://localhost:3000/my-dashboard/integrations\\" title=\\"Log in\\" target=\\"_blank\\" rel=\\"noreferrer\\">Log in</a>.
</p>
<p>
  If you have any questions, please contact us by
  <a href=\\"https://chat.developer.gov.bc.ca/channel/sso\\" target=\\"_blank\\" title=\\"Rocket Chat\\" rel=\\"noreferrer\\">
    Rocket.Chat
  </a>
  or email at:
  <a href=\\"mailto:bcgov.sso@gov.bc.ca\\" title=\\"Pathfinder SSO\\" target=\\"_blank\\" rel=\\"noreferrer\\"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>
"
`;

exports[`Email template snapshots Should return the expeted email for UPDATE_INTEGRATION_APPROVED 1`] = `"[DEV] Pathfinder SSO change request approved and can be downloaded"`;

exports[`Email template snapshots Should return the expeted email for UPDATE_INTEGRATION_APPROVED 2`] = `
"<h1>Your Pathfinder SSO change for integration ID 1 is approved.</h1>
<p>
  <strong>Project name: </strong>test<br />
  <strong>Submitted by: </strong>SSO Admin
</p>
<p>
  Please
  <a href=\\"http://localhost:3000/my-dashboard/integrations\\" title=\\"Log in\\" target=\\"_blank\\" rel=\\"noreferrer\\">Log in</a>
  to your dashboard to access JSON Client Installation File. If you are not the requester, this email serves only to
  notify you of the request status.
</p>
<p>
  If you have any questions, please contact us by
  <a href=\\"https://chat.developer.gov.bc.ca/channel/sso\\" target=\\"_blank\\" title=\\"Rocket Chat\\" rel=\\"noreferrer\\">
    Rocket.Chat
  </a>
  or email at:
  <a href=\\"mailto:bcgov.sso@gov.bc.ca\\" title=\\"Pathfinder SSO\\" target=\\"_blank\\" rel=\\"noreferrer\\"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>
"
`;

exports[`Email template snapshots Should return the expeted email for UPDATE_INTEGRATION_SUBMITTED 1`] = `"[DEV] Pathfinder SSO change request submitted"`;

exports[`Email template snapshots Should return the expeted email for UPDATE_INTEGRATION_SUBMITTED 2`] = `
"<h1>Your Pathfinder SSO change request for integration ID 1 is successfully submitted.</h1>
<p>
  <strong>Project name: </strong>test<br />
  <strong>Submitted by: </strong>SSO Admin
</p>
<p>
  <strong>The expected processing time is 20 minutes</strong><br />
  Once the request is approved, you will receive another email once your JSON Client Installation is ready. If you are
  not the requester, this email serves only to notify you of the request status.
</p>
<p>
  If you have any questions, please contact us by
  <a href=\\"https://chat.developer.gov.bc.ca/channel/sso\\" target=\\"_blank\\" title=\\"Rocket Chat\\" rel=\\"noreferrer\\">
    Rocket.Chat
  </a>
  or email at:
  <a href=\\"mailto:bcgov.sso@gov.bc.ca\\" title=\\"Pathfinder SSO\\" target=\\"_blank\\" rel=\\"noreferrer\\"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>
"
`;
